整理了一下相关文件和自己的负责部分

--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -7,6 +7,6 @@ jdbc.password=1234
 #保存位置
 targetModelPackage=dailymanagement.demo.bean
 targetXMLPackage=dailymanagement.demo.mapper
-targetMapperPackage=dailymanagement.demo.mapper
+targetMapperPackage=dailymanagement.demo.dao
 targetJavaProject=src/main/java
 targetResourcesProject=src/main/java
