--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
+
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -52,6 +54,13 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
@@ -93,6 +102,15 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
