--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#数据源配置
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dailymanagement?characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
 
+#编码格式
+server.tomcat.uri-encoding=utf-8
+
+#扫描mapper.xml文件
+mybatis.mapper-locations=classpath:dailymanagement/demo/mapper/*.xml
