第二次提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,16 @@ server.tomcat.uri-encoding=utf-8
 mybatis.mapper-locations=classpath:dailymanagement/demo/mapper/*.xml
 
 server.port=8080
+
+#aliyunoss
+aliyun.oss.file.endpoint=http://oss-cn-chengdu.aliyuncs.com
+aliyun.oss.file.keyid=LTAI4Fo345dmoPsjQYjNkqaj
+aliyun.oss.file.keysecret=dXwwcOWo4aSyYMavJ0dM8RGnmCPsws
+#bucket可以在控制台创建，也可以使用java代码创建
+aliyun.oss.file.bucketname=passlove
+aliyun.oss.file.filehost=avatar
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
