--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #数据源配置
-spring.datasource.url=jdbc:mysql://39.105.232.155:3306/39.105.232.155?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://120.24.93.68:3306/daliymanagement?characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=wyk567123
-spring.datasource.password=wyk567567
+spring.datasource.username=root
+spring.datasource.password=123456
 
 #编码格式
 server.tomcat.uri-encoding=utf-8
