4-17备份 第二次提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ aliyun.oss.file.bucketname=passlove
 aliyun.oss.file.filehost=avatar
 
 # RedisProperties
-spring.redis.database=11
-spring.redis.host=localhost
+spring.redis.host=39.108.158.74
+spring.redis.password=mypassword
 spring.redis.port=6379
+spring.redis.database=9
